Add `react-bootstrap` to the project

--- a/src/electron/index.html
+++ b/src/electron/index.html
@@ -7,6 +7,13 @@
         <script>
             global = globalThis;
         </script>
+
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+            crossorigin="anonymous"
+        />
     </head>
 
     <body>
