Integrate `nodemon` with Electron

--- a/src/electron/index.html
+++ b/src/electron/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Electron</title>
+
+        <script>
+            global = globalThis;
+        </script>
     </head>
 
     <body>
