--- a/src/electron/index.html
+++ b/src/electron/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Electron</title>
+        <title>Laudiolin</title>
 
         <script>
             global = globalThis;
