--- a/index.html
+++ b/index.html
@@ -1,14 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Laudiolin</title>
-  </head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Laudiolin</title>
+  <style>
+    #placeholderBG {
+      background: linear-gradient(45deg, #0f172a, #1e293b);
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+
+    #bars {
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      height: 50px;
+      width: 50px;
+      margin: 0 0 0 -75px;
+    }
+
+    #bars span {
+      position: absolute;
+      display: block;
+      bottom: 30px;
+      width: 27px;
+      height: 45px;
+      background: rgba(255, 255, 255, 0.25);
+      animation: bars1 1.5s infinite ease-in-out;
+    }
+
+    #bars span:nth-child(2) {
+      left: 33px;
+      animation-delay: 0.2s;
+    }
+
+    #bars span:nth-child(3) {
+      left: 66px;
+      animation-delay: 0.4s;
+    }
+
+    #bars span:nth-child(4) {
+      left: 99px;
+      animation-delay: 0.6s;
+    }
+
+    #bars span:nth-child(5) {
+      left: 132px;
+      animation-delay: 0.8s;
+    }
+
+    @keyframes bars1 {
+      0% {
+        height: 15px;
+        transform: translateY(0px);
+      }
+
+      25% {
+        height: 90px;
+        transform: translateY(15px);
+        background: #fff;
+      }
+
+      50% {
+        height: 15px;
+        transform: translateY(0px);
+        background: rgba(255, 255, 255, 0.25);
+      }
+
+      100% {
+        height: 15px;
+        transform: translateY(0px);
+        background: rgba(255, 255, 255, 0.25);
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div id="placeholderBG"></div>
+  <div id="bars">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
