Add favicon to website

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         40% { box-shadow: 0 2.5em 0 0 }
       }
     </style>
+    <link rel="icon" type="image/x-icon" href="https://seikimo.moe/icon.png">
   </head>
 
   <body>
