Prevent dragging the loading image

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <body>
     <div id="placeholderBG">
-        <img src="/launch_screen.png" alt="placeholderBG" />
+        <img src="/launch_screen.png" alt="placeholderBG" draggable="false" />
     </div>
     <span class="loader"></span>
     <div id="root"></div>
